# VulkanEngine

./: .gitignore  CMakeLists.txt  imgui.ini  shader_compilation.bat  vcpkg.json
engine/: GUI.h
engine/include/: Application.h  Camera.h  Camera3D.h  Engine.h  GUI.h  GameObject.h  InputManager.h  Mesh.h  Transform.h  Vertex.h  Vulkan.h  VulkanContext.h
engine/include/camera/: Camera.h
engine/include/common/: Application.h  Engine.h  GameObject.h  Window.h
engine/include/graphics/: BufferHandler.h  CommandBuffers.h  DebugUtils.h  DeviceHandler.h  Image.h  Mesh.h  PushBuffer.h  RenderPass.h  RenderPipeline.h  RenderPipelineLayout.h  Shader.h  SwapChain.h  UniformBuffer.h  VulkanContext.h  VulkanHelper.h  VulkanTypes.h
engine/include/gui/: GUI.h
engine/include/io/: Asset.h  AssetLoader.h  Assets.h  Base64.h  Filesystem.h
engine/include/misc/: Destroyable.h  Timer.h
engine/include/physics/: GameWorld.h  Transform.h
engine/include/vulkan/: BufferHandler.h  DebugUtils.h  DeviceHandler.h  UniformBuffer.h  VulkanContext.h  VulkanHelper.h
engine/src/: Application.cpp  Camera.cpp  Camera3D.cpp  Engine.cpp  Filesystem.cpp  GUI.cpp  GameObject.cpp  InputManager.cpp  Mesh.cpp  Transform.cpp  Vertex.cpp  Vulkan.cpp  Window.cpp
engine/src/camera/: Camera.cpp  Camera3D.cpp
engine/src/common/: Application.cpp  Engine.cpp  GameObject.cpp  Window.cpp
engine/src/graphics/: BufferHandler.cpp  CommandBuffers.cpp  DebugUtils.cpp  DeviceHandler.cpp  Image.cpp  Mesh.cpp  RenderPass.cpp  RenderPipeline.cpp  RenderPipelineLayout.cpp  Shader.cpp  SwapChain.cpp  VulkanContext.cpp  VulkanHelper.cpp
engine/src/gui/: GUI.cpp
engine/src/input/: InputManager.cpp
engine/src/io/: Asset.cpp  AssetLoader.cpp  Assets.cpp  Base64.cpp  Filesystem.cpp
engine/src/misc/: Timer.cpp
engine/src/physics/: GameWorld.cpp  Transform.cpp
engine/src/vulkan/: BufferHandler.cpp  DebugUtils.cpp  DeviceHandler.cpp  VulkanHelper.cpp
include/: Game.h  LitPipeline.h
lib/: OBJ_Loader.h
shaders/: shader.frag  shader.vert
src/: Game.cpp  LitPipeline.cpp  main.cpp
